--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "elm-data": "github:pravdomil/elm-data",
-    "elm-utils": "github:pravdomil/elm-utils"
+    "elm-utils": "github:pravdomil/elm-utils",
+    "pravdomil-ui": "github:pravdomil/pravdomil-ui"
   }
 }
