--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "elm-codec": "github:pravdomil/elm-codec",
     "elm-data": "github:pravdomil/elm-data",
     "elm-utils": "github:pravdomil/elm-utils",
     "pravdomil-ui": "github:pravdomil/pravdomil-ui"
