--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "elm-data": "github:pravdomil/elm-data",
     "elm-ffi": "github:pravdomil/elm-ffi",
+    "elm-minify": "github:pravdomil/elm-minify",
     "elm-serve": "github:pravdomil/elm-serve",
     "elm-utils": "github:pravdomil/elm-utils"
   }
