--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "elm": "^0.19.1-6",
     "elm-data": "github:pravdomil/elm-data",
     "elm-ffi": "github:pravdomil/elm-ffi",
     "elm-minify": "github:pravdomil/elm-minify",
